<resources>
    <string name="app_name">Fasalbook</string>


    <!-- Custom font name -->
    <string name="ProximaNovaBold">ProximaNovaBold</string>
    <string name="ProximaNovaLight">ProximaNovaLight</string>
    <string name="ProximaNovaReg">ProximaNovaReg</string>
    <string name="ProximaNovaRegIt">ProximaNovaRegIt</string>
    <string name="ProximaNovaThin">ProximaNovaThin</string>
    <string name="ProximaNovaXbold">ProximaNovaXbold</string>
    <declare-styleable name="CustomFontTextView">
        <attr name="CustomFontName" />
    </declare-styleable>
    <declare-styleable name="CustomFontEditText">
        <attr name="CustomFontName" />
    </declare-styleable>
    <declare-styleable name="CustomFontButton">
        <attr name="CustomFontName" />
    </declare-styleable>

    <string name="label_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="label_govt_schemes">Govt. Schemes</string>
    <string name="label_knowledge_center">Knowledge Center</string>
    <string name="label_share_ideas">Share Ideas</string>
    <string name="label_events">Events</string>
    <string name="label_sell">Sell</string>
    <string name="label_buy">Buy</string>
    <string name="label_profile">Profile</string>
    <string name="label_changepassword">Change Password</string>
    <string name="label_aboutapp">About App</string>
    <string name="label_shareapp">Share App</string>
    <string name="label_logout">Logout</string>
    <string name="label_suggestion">Suggestions</string>


    <string name="label_agriculture">Agriculture</string>
    <string name="label_landscap_gardening">Landscape and Gardening</string>
    <string name="label_farm_tourism">Farm Tourism</string>
    <string name="label_other_services">Other Services</string>
    <string name="label_organic">Organic</string>
    <string name="label_nonorganic">Non-Organic</string>
    <string name="label_logout_message">Are you sure you want to logout ?</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">CANCEL</string>
    <string name="enter_full_name">Please enter name of item</string>
    <string name="enter_unit_value">Please enter unit value</string>
    <string name="enter_quantity">Please enter quantity</string>
    <string name="label_product_not_found">Product not found</string>
    <string name="select_state">Select State</string>
    <string name="select_City">Select City</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="enter_valid_email_id">Please enter valid email address</string>
    <string name="enter_password">Please enter password</string>
    <string name="minimum_6_characters">Please enter at least 6 characters</string>
    <string name="label_select_state">Please select state</string>
    <string name="label_select_city">Please select city</string>
    <string name="label_select_block">Please select block</string>
    <string name="label_enter_village_name">Please enter village name</string>
    <string name="label_enter_pin_code">Please enter pin code</string>
    <string name="label_enter_company_name">Please enter company  name</string>
    <string name="enter_sex">Please select gender</string>
    <string name="enter_date_of_birth">Please select Date of birth</string>
    <string name="select_block">Select Block</string>
    <string name="enter_name">Please enter name</string>
    <string name="label_user_registerd">Register Successful</string>
    <string name="label_user_no_registerd">User not registered</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="label_password_doesnot_match">Password doesn\'t match</string>
    <string name="label_password_change_successful">Password change successful</string>

    <string name="label_user_login_successful">Login Successful</string>
    <string name="label_user_login_failed">Login Failed</string>

    <string name="label_events_category">Events</string>

    <string name="label_sell_item_add_successful">Item added Successfully</string>
    <string name="label_sell_item_add_unsuccessful">Item is not added</string>

    <string name="label_user_already_registerd">User Already Registered</string>

    <string name="label_add_item_images_count_warning">Please add atleast 1 Images</string>

    <string name="label_item_delete_successful">Item deleted Successfully</string>
    <string name="label_item_delete_unsuccessful">Item is not deleted</string>

    <string name="label_add_item_dialog_title">Add Item</string>
    <string name="label_edit_item_dialog_title">Edit Item</string>

    <string name="label_edit_item_dialog_button">Save</string>
    <string name="label_add_item_dialog_button">Add</string>

    <string name="label_changelanguage">Change Language</string>
    <string name="farm_tourism_publish_message">Are you sure to publish this ?</string>
    <string name="enter_farm_name">Enter Farm Name</string>
    <string name="enter_farm_address">Enter Address</string>
    <string name="enter_farm_contact_number">Enter Contact Number</string>
    <string name="enter_farm_facitilites">Enter Facilities</string>
    <string name="enter_farm_attraction">Enter Attraction</string>
    <string name="select_farm_image">Please selected Image</string>
    <string name="label_select_address_from_map">Select Address From Map</string>
    <string name="enter_farm_contact_email">Enter Contact Email</string>
    <string name="enter_farm_website">Enter Website</string>
    <string name="enter_farm_price">Enter Price</string>
    <string name="submit">Submit</string>
    <string name="label_add_farm_attractions">Add Farm Attractions</string>
    <string name="label_no_record_found">No Record Found</string>
    <string name="label_share_idea_upload_image_msg">You can upload any image.</string>
    <string name="label_share_idea_upload_document_file">You can upload document file.</string>
    <string name="label_upload_image">Upload Image</string>
    <string name="label_upload_new_cutting">Upload Document</string>
    <string name="label_share_video">Share Video</string>
    <string name="label_upload_video">Upload Video</string>
    <string name="label_share_idea_upload_video_msg">You can upload video to share your idea</string>
    <string name="label_select_image">Select Image</string>
    <string name="label_share_images">Share Images</string>
    <string name="label_share_idea">Share Idea</string>
    <string name="label_share_idea_upload_text_msg">You can share your ideas in write-up</string>
    <string name="label_ideas_in_text">Write-up</string>
    <string name="label_title">Title</string>
    <string name="label_short_description">Short Description</string>
    <string name="label_enter_title">Please enter title of idea</string>
    <string name="label_enter_short_description">Please enter short description</string>
    <string name="label_confirm_address">Confirm Address</string>
    <string name="label_map">Map</string>
    <string name="enter_service_offered">Please enter service offered</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_choose_language_dialog">Choose Language</string>
    <string name="label_image_dialog_item_take_photo">Take Photo</string>
    <string name="label_image_dialog_item_choose_from_gallery">Choose from Gallery</string>
    <string name="label_image_dialog_cancel">Cancel</string>
    <string name="label_image_dialog_title">Add Photo!</string>
    <string name="label_phone_verification_msg">Please enter your 10 digit Phone Number, we will send 6 digit verification code to verify it</string>
    <string name="label_phone_verification">Phone Verification</string>
    <string name="label_enter_your_phone">Enter Your Phone</string>
    <string name="label_send_otp">Send OTP</string>
    <string name="label_verify_otp">Verify OTP</string>
    <string name="label_enter_4_digit_otp">Enter 6 digit OTP</string>
    <string name="label_enter_the_received_otp_here">Enter the received OTP here</string>
    <string name="label_otp_sent">OTP Sent</string>
    <string name="label_otp_not_sent">OTP is not sent</string>
    <string name="label_verification_failed">Verification Failed</string>
    <string name="label_verification_success">Verification Successful</string>
    <string name="label_send_otp_first">Please send the OTP first</string>
    <string name="label_password_not_changed">Password not changed</string>
    <string name="label_update_password">Update Password</string>
    <string name="label_enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="label_next">Next</string>
    <string name="label_enterotp">Enter OTP here</string>
    <string name="label_enter_here">Enter code here</string>
    <string name="label_verify">Verify</string>
    <string name="label_resend_code">Resend OTP</string>
    <string name="label_second">Seconds</string>
    <string name="label_verification">Verification</string>
    <string name="label_otpSmsinfo">We have sent you an access code view sms for mobile number verifications.</string>
    <string name="label_resentOtp_time">Resent OTP in </string>
    <string name="hint_hyph">-</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_feedback">Suggestion</string>
    <string name="label_enter_suggestion">Write a message...</string>
    <string name="label_send_feedback">Send Suggestion</string>
    <string name="label_suggestion_added">Suggestion Added</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="label_sex">Sex</string>
    <string name="label_male">Male</string>
    <string name="female">Female</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_mobile_number">Mobile No</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_village">Village/Colony</string>
    <string name="label_pincode">Pin code</string>
    <string name="label_name_of_company">Name of Company/Firm/Group</string>
    <string name="label_register">Register</string>
    <string name="please_upload_image">"Please upload image "</string>
    <string name="please_upload_new_cutting">Please upload  new cutting</string>
    <string name="label_successful">Successfully done.</string>
    <string name="label_select_file">Select file</string>
    <string name="label_select_video">Select Video</string>
    <string name="about_us">About Us</string>
    <string name="please_upload_video">Please upload video</string>
    <string name="label_reset_filter">Reset Filter</string>
    <string name="label_search">Search</string>
    <string name="label_product_details">Product Details</string>
    <string name="specification">Specification</string>
    <string name="enter_specification">Please enter specification</string>
    <string name="enter_office_name">Please enter office name</string>
</resources>