<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">


        <com.wasfat.utils.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp"
            app:CustomFontName="ProximaNovaBold" />

        <RelativeLayout
            android:id="@+id/rlProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_profile"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_perm_identity_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlChangePassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_changepassword"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_assignment_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_changelanguage"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_language" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlAboutApp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_aboutapp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_perm_identity_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlShareApp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_shareapp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_share_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSuggestions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_suggestion"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_perm_identity_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_privacy_policy"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_perm_identity_24" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLogout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_gradient">

            <com.wasfat.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/label_logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:CustomFontName="ProximaNovaBold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_outline_power_settings_new_24" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>